Wed Jul 17 17:19:54 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename heap management functions with prefix "heap_".
	  * allocate_sorted_array() -> heap_allocate_sorted_array().
	  * slot_add_freeobj()      -> heap_slot_add_freeobj().
	  * assign_heap_slot()      -> heap_assign_slot().
	  * add_heap_slots()        -> heap_add_slots().
	  * init_heap()             -> heap_init().
	  * set_heap_increment()    -> heap_set_increment().

	* gc.c (initial_expand_heap): inlined in rb_gc_set_params().

Wed Jul 17 17:12:23 2013  Matthew M. Boedicker  <matthewm@boedicker.org>

	* hash.c (env_fetch): Add key name to message on ENV.fetch KeyError,
	  as well as Hash#fetch.  [ruby-core:56062] [Feature #8649]

Wed Jul 17 15:59:33 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: catch up last changes for debugging/checking mode.

Wed Jul 17 15:50:10 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_free): free slot itself.

	* gc.c (objspace_each_objects): fix condition.
	  Use slot->body instead of slot.

	* gc.c (count_objects): use "slot" variable.

Wed Jul 17 15:21:10 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (unlink_heap_slot): fix memory leak.
	  free slot itself at free_heap_slot().

	  Reproduce-able code is here:
	    N1 = 100_000; N2 = 1_000_000
	    N1.times{ary = []; N2.times{ary << ''}}
	  Maybe this problem is remaining in Ruby 2.0.0.

	* gc.c (unlink_heap_slot): remove not working code.

Wed Jul 17 14:31:13 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: re-design the heap structure.

	  (1) The heap is consists of a set of slots.
	  (2) Each "slot" has a "slot_body".
	      slot::start and slot::limit specify RVALUE beginning address
	      and number of RVALUE in a "slot_body".
	  (3) "slot_body" contains a pointer to slot (slot_body::header::slot)
	      and an array of RVALUE.
	  (4) heap::sorted is an array of "slots", sorted by an address of
	      slot::body.

	  See https://bugs.ruby-lang.org/projects/ruby-trunk/wiki/GC_design