@@ -1,3 +1,8 @@
+Wed Jul 17 22:13:26 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* hash.c (rb_hash_replace): performance improvement by using
+	  st_copy().
+
 Wed Jul 17 17:19:54 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: rename heap management functions with prefix "heap_".
